# Feather

./: .gitignore  CMakeLists.txt  Feather.vcxproj  Feather.vcxproj.filters  GenerateProjects.bat  LICENSE.md  main.cpp  premake5.lua
EventQueue/: Event.h  EventQueue.h
Events/: ComponentAddedEvent.cpp  ComponentAddedEvent.h
Feather/: ComponentRegistry.h  ComponentSparseSet.h  EntityHandle.h  EntityRegistry.cpp  EntityRegistry.h  GenerateProjects.bat  IComponentSet.h  Pool.h  System.h  SystemRegistry.cpp  SystemRegistry.h  Types.h  World.cpp  World.h  premake5.lua  premake5_StaticLib.lua
Feather/Feather/src/EventQueue/: EventQueue.cpp  EventQueue.h
Feather/Feather/src/Feather/: ComponentSparseSet.cpp  ComponentSparseSet.h  EntityRegistry.h  World.cpp
Feather/bin-int/Debug-windows-x86_64/Feather/: vc141.idb
_vsFiles/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Feather.sln  Feather.vcxproj  Feather.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
_vsFiles/Debug/: Feather.ilk
feather/: ComponentRegistry.h  ComponentSparseSet.h  Types.h  World.cpp  World.h  main.cpp
feather/EventQueue/: MemberFunctionHandler.h
feather/Events/: ComponentAddedEvent.h  ComponentRemovedEvent.h  EntityEvents.h
feather/Feather/: CustomTypeID.h  EntityHandle.h  System.cpp  SystemRegistry.h
src/: main.cpp
src/EventQueue/: MemberFunctionHandler.cpp
src/Events/: ComponentRemovedEvent.h  EntityEvents.h
src/Feather/: Benchmark.h  ComponentRegistry.cpp  ComponentRegistry.h  EntityHandle.cpp  EntityHandle.h  System.h  World.h
(+28 files in other folders)
